fixed settings enumerated list from overlapping addressing icon

--- a/html/css/pedals.css
+++ b/html/css/pedals.css
@@ -370,7 +370,7 @@ body > .mod-settings.mod-window-visible {
 
 .mod-pedal-settings .mod-enumerated .mod-enumerated-list {
     color:#fff;
-    height:103px;
+    height:92px;
     overflow:auto;
     position:relative;
 }
